# stalker-xrf-tools

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml
.run/: build.run.xml  (+27 more)
crates/xray-archive/: Cargo.toml
crates/xray-archive/src/: error.rs  lib.rs  types.rs
crates/xray-archive/src/archive/: archive_constants.rs  archive_descriptor.rs  archive_file_descriptor.rs  archive_header.rs  descriptor.rs  file_descriptor.rs  header.rs  interface.rs  io.rs  mod.rs  reader.rs
crates/xray-archive/src/error/: archive_error.rs  archive_read_error.rs  mod.rs
crates/xray-archive/src/project/: archive_project.rs  archive_project_read.rs  archive_project_read_result.rs  archive_project_unpack.rs  mod.rs  project.rs  project_constants.rs  project_read.rs  project_read_result.rs  project_unpack.rs  project_unpack_result.rs
crates/xray-chunk/: Cargo.toml
crates/xray-chunk/src/: chunk_io.rs  error.rs  lib.rs  types.rs
crates/xray-chunk/src/chunk/: chunk_io.rs  chunk_iterator.rs  chunk_trait.rs  io.rs  iterator.rs  mod.rs  reader.rs  utils.rs  writer.rs
crates/xray-chunk/src/error/: chunk_error.rs  chunk_parsing_error.rs  invalid_chunk_error.rs  mod.rs
crates/xray-chunk/src/iterator/: chunk_iterator.rs  chunk_size_packed_iterator.rs  mod.rs
crates/xray-chunk/src/reader/: chunk_reader.rs  chunk_reader_extension.rs  chunk_reader_strings.rs
crates/xray-chunk/src/source/: chunk_data_source.rs  chunk_memory_source.rs  chunk_slice_source.rs
crates/xray-chunk/src/utils/: chunk_utils_assert.rs  chunk_utils_find.rs  chunk_utils_read.rs  mod.rs
crates/xray-chunk/src/writer/: chunk_writer_extension.rs
crates/xray-db/: Cargo.toml  Makefile.toml
crates/xray-db/src/: constants.rs  error.rs  export.rs  file_import.rs  lib.rs  types.rs
crates/xray-db/src/chunk/: chunk.rs  iterator.rs  mod.rs  reader.rs  utils.rs  writer.rs
crates/xray-db/src/data/: alife_object_base.rs  artefact_spawn_point.rs  mod.rs  shape.rs  time.rs  vector_3d.rs
crates/xray-db/src/error/: database_error.rs  database_invalid_chunk_error.rs  database_not_implemented_error.rs  database_parse_error.rs  mod.rs
crates/xray-db/src/export/: file.rs  file_export.rs  file_import.rs  mod.rs  string.rs
crates/xray-db/src/file/: alife_spawns_chunk.rs  artefact_spawns_chunk.rs  graphs_chunk.rs  header_chunk.rs  patrols_chunk.rs  spawn_file.rs
crates/xray-db/src/ogf/: ogf_file.rs
crates/xray-db/src/ogf_file/: mod.rs  ogf_file.rs
crates/xray-db/src/omf/: omf_file.rs
crates/xray-db/src/omf_file/: mod.rs  omf_file.rs
crates/xray-db/src/particles/: particles_file.rs
crates/xray-db/src/particles_file/: mod.rs  particles_effects_chunk.rs  particles_file.rs  particles_groups_chunk.rs  particles_header_chunk.rs  particles_version_chunk.rs
crates/xray-db/src/spawn/: spawn_file.rs
crates/xray-db/src/spawn_file/: mod.rs  spawn_alife_spawns_chunk.rs  spawn_artefact_spawns_chunk.rs  spawn_file.rs  spawn_graphs_chunk.rs  spawn_header_chunk.rs  spawn_patrols_chunk.rs
crates/xray-db/src/test/: file.rs  mod.rs  utils.rs
crates/xray-export/: Cargo.toml
crates/xray-export/src/: constants.rs  effects_parser.rs  error.rs  exports_parser.rs  extern_descriptor.rs  lib.rs  types.rs
crates/xray-export/src/ast/: ast_to_string.rs  ast_utils.rs  mod.rs
crates/xray-export/src/error/: export_error.rs  mod.rs  parse_error.rs
crates/xray-gamedata/: Cargo.toml  Makefile.toml
crates/xray-gamedata/src/: constants.rs  error.rs  gamedata_error.rs  lib.rs  types.rs
crates/xray-gamedata/src/asset/: asset_descriptor.rs  asset_type.rs  mod.rs
crates/xray-gamedata/src/error/: gamedata_error.rs  mod.rs
crates/xray-gamedata/src/project/: gamedata_asset_descriptor.rs  gamedata_generic_result.rs  gamedata_project.rs  gamedata_project_asset.rs  gamedata_project_assets.rs  gamedata_project_options.rs  gamedata_project_result.rs  gamedata_project_section.rs  gamedata_project_verify.rs  gamedata_project_verify_animations.rs  gamedata_project_verify_levels.rs  gamedata_project_verify_ltx.rs  gamedata_project_verify_meshes.rs  gamedata_project_verify_resources.rs  gamedata_project_verify_shaders.rs  gamedata_project_verify_sounds.rs  gamedata_project_verify_spawn.rs  gamedata_project_verify_spawns.rs  gamedata_project_verify_textures.rs  gamedata_project_verify_weapons.rs  gamedata_project_verify_weathers.rs  gamedata_verification_result.rs  gamedata_verification_type.rs  mod.rs
crates/xray-ltx/: Cargo.toml
crates/xray-ltx/src/: constants.rs  error.rs  escape_policy.rs  ini.rs  iterator.rs  lib.rs  line_separator.rs  ltx.rs  ltx_error.rs  parser.rs  properties.rs  property.rs  reader.rs  section_entry.rs  section_setter.rs  types.rs  write_option.rs  writer.rs
crates/xray-ltx/src/error/: ltx_convert_error.rs  ltx_error.rs  ltx_format_error.rs  ltx_parse_error.rs  ltx_read_error.rs  ltx_scheme_error.rs  ltx_verify_error.rs  mod.rs
crates/xray-ltx/src/file/: constants.rs  error.rs  formatter.rs  include.rs  inherit.rs  iterator.rs  ltx.rs  ltx_include.rs  ltx_inherit.rs  mod.rs  parse_option.rs  parse_options.rs  parser.rs  properties.rs  reader.rs  section_entry.rs  section_setter.rs  types.rs  utils.rs  write_option.rs  write_options.rs  writer.rs
crates/xray-ltx/src/project/: format_options.rs  ltx_format_options.rs  ltx_project.rs  ltx_project_format.rs  ltx_project_verify.rs  ltx_project_verify_result.rs  mod.rs  project.rs  project_format.rs  project_format_result.rs  project_options.rs  project_verify.rs  project_verify_result.rs  verify_options.rs
crates/xray-ltx/src/scheme/: field_data_type.rs  field_scheme.rs  mod.rs  parser.rs  section_scheme.rs
crates/xray-ltx/src/test/: file.rs  utils.rs
crates/xray-texture/: Cargo.toml
crates/xray-texture/src/: error.rs  images.rs  lib.rs  types.rs
crates/xray-texture/src/data/: file_description.rs  inventory_sprite_descriptor.rs  mod.rs  sprite_description.rs  texture_file_descriptor.rs  texture_sprite_descriptor.rs
crates/xray-translation/: Cargo.toml
crates/xray-translation/src/: error.rs  language.rs  lib.rs  types.rs
(+1041 files in other folders)
