[workspace]
resolver = "2"
members = [
    "bin/xrf-app",
    "bin/xrf-cli",
    "crates/xray-archive",
    "crates/xray-chunk",
    "crates/xray-db",
    "crates/xray-delharc",
    "crates/xray-error",
    "crates/xray-error-derive",
    "crates/xray-export",
    "crates/xray-gamedata",
    "crates/xray-ltx",
    "crates/xray-test-utils",
    "crates/xray-texture",
    "crates/xray-translation",
    "crates/xray-utils",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace.lints.rust]
unused = "allow"

[workspace.lints.clippy]
extra_unused_type_parameters = "allow"
doc_lazy_continuation = "allow"