[package]
name = "xray-archive"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"

[dependencies]
bounded_join_set = "0.2.0"
byteorder = "1.4.3"
crc32fast = "1.3.2"
delharc = { path = "../xray-delharc", features = ["lh1"] }
log = "0.4.20"
minilzo-rs = "0.6.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2.0.10"
walkdir = "2.5.0"
xray-utils = { path = "../xray-utils" }

[dev-dependencies]
xray-test-utils = { path = "../xray-test-utils" }
