[package]
name = "xray-archive"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"

[dependencies]
bounded_join_set = "0.3.0"
byteorder = "1.5.0"
crc32fast = "1.5.0"
delharc = { path = "../xray-delharc", features = ["std", "lh1"] }
log = "0.4.28"
minilzo-rs = "0.6.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
xray-error = { path = "../xray-error" }
xray-utils = { path = "../xray-utils" }

[lints]
workspace = true