[package]
name = "xray-chunk"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
parquet = "54.0.0"
byteorder = "1.5.0"
fileslice = "0.5.0"
xray-error = { path = "../xray-error" }
xray-utils = { path = "../xray-utils" }

[dev-dependencies]
xray-test-utils = { path = "../xray-test-utils" }
