[package]
name = "xray-chunk"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.0"
parquet = "57.1.0"
byteorder = "1.5.0"
fileslice = "0.7.0"
xray-error = { path = "../xray-error" }
xray-utils = { path = "../xray-utils" }

[dev-dependencies]
xray-test-utils = { path = "../xray-test-utils" }

[lints]
workspace = true