[package]
name = "xray-export"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
swc_common = { version = "5.0.1", features = ["tty-emitter"] }
swc_ecma_ast = "5.1.0"
swc_ecma_parser = "7.0.1"
walkdir = "2.5.0"
xray-error = { path = "../xray-error" }
xray-utils = { path = "../xray-utils" }

[lints]
workspace = true