[package]
name = "xray-gamedata"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
ddsfile = "0.5.2"
full_moon = "1.2.0"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.11.1"
walkdir = "2.5.0"
xray-db = { path = "../xray-db" }
xray-error = { path = "../xray-error" }
xray-ltx = { path = "../xray-ltx" }
xray-utils = { path = "../xray-utils" }
