[package]
name = "xray-gamedata"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
derive_more = { version = "1.0.0", features = ["display"] }
ddsfile = "0.5.2"
full_moon = "1.2.0"
log = "0.4.28"
rayon = "1.11.0"
regex = "1.12.2"
walkdir = "2.5.0"
xray-db = { path = "../xray-db" }
xray-error = { path = "../xray-error" }
xray-ltx = { path = "../xray-ltx" }
xray-utils = { path = "../xray-utils" }

[lints]
workspace = true