[package]
name = "xray-ltx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
fxhash = "0.2.1"
indexmap = "2.2.5"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2.0.10"
walkdir = "2.5.0"
xray-utils = { path = "../xray-utils" }

[dev-dependencies]
xray-test-utils = { path = "../xray-test-utils" }
