[package]
name = "xray-ltx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
fxhash = "0.2.1"
indexmap = "2.7.1"
serde = { version = "1.0.217", features = ["derive"] }
walkdir = "2.5.0"
xray-error = { path = "../xray-error" }
xray-utils = { path = "../xray-utils" }

[dev-dependencies]
xray-test-utils = { path = "../xray-test-utils" }
