[package]
name = "xray-texture"
version = "0.1.0"
edition = "2021"

[dependencies]
ddsfile = "0.5.2"
image = "0.25.5"
image_dds = "0.7.1"
log = "0.4.25"
path-absolutize = "3.1.1"
rayon = "1.10.0"
roxmltree = "0.20.0"
serde = { version = "1.0.217", features = ["derive"] }
xray-error = { path = "../xray-error" }
xray-ltx = { path = "../xray-ltx" }
xray-utils = { path = "../xray-utils" }

[lints]
workspace = true