[package]
name = "xray-translation"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
log = "0.4.25"
quick-xml = { version = "0.37.2", features = ["serialize", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
walkdir = "2.5.0"
xray-error = { path = "../xray-error" }
xray-utils = { path = "../xray-utils" }