[package]
name = "xray-translation"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
log = "0.4.28"
quick-xml = { version = "0.38.4", features = ["serialize", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
xray-error = { path = "../xray-error" }
xray-utils = { path = "../xray-utils" }

[lints]
workspace = true